--- a/app/src/main/res/layout/frag_new_dashboard.xml
+++ b/app/src/main/res/layout/frag_new_dashboard.xml
@@ -110,9 +110,9 @@
             />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
-<!--   sales report     -->
+
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/dispCard"
+            android:id="@+id/lcvManagement"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="8dp"
@@ -142,13 +142,61 @@
                     android:layout_height="100dp"
                     android:layout_margin="4dp"
                     android:padding="4dp"
+                    android:src="@drawable/ic_tanker_red"
+                    app:tint="@color/orange"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="28dp"
+                    android:gravity="center"
+                    android:layout_margin="4dp"
+                    android:padding="4dp"
+                    android:text="LCV Management"
+                    android:textColor="#1E7D34"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+<!--   sales report     -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/dispCard"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            android:padding="8dp"
+            android:layout_weight="8"
+
+            app:cardBackgroundColor="#E9ECEF"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="4dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="4dp">
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="90dp"
+                    android:layout_margin="4dp"
+                    android:padding="4dp"
                     android:src="@drawable/disp"
                     />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="35dp"
+                    android:textSize="28dp"
                     android:gravity="center"
                     android:layout_margin="4dp"
                     android:padding="4dp"
@@ -185,7 +233,7 @@
 
                 <ImageView
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_height="90dp"
                     android:layout_margin="4dp"
                     android:padding="4dp"
                     android:src="@drawable/ic_challan"
@@ -195,7 +243,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="35dp"
+                    android:textSize="28dp"
                     android:gravity="center"
                     android:layout_margin="4dp"
                     android:padding="4dp"
@@ -235,14 +283,14 @@
                     android:layout_height="100dp"
                     android:layout_margin="4dp"
                     android:padding="4dp"
-                    android:src="@drawable/ic_tanker_red"
+                    android:src="@drawable/ic_gas_reconciliation"
                     app:tint="@color/orange"
                     />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="35dp"
+                    android:textSize="28dp"
                     android:gravity="center"
                     android:layout_margin="4dp"
                     android:padding="4dp"
@@ -281,7 +329,7 @@
 
                 <ImageView
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_height="90dp"
                     android:layout_margin="4dp"
                     android:padding="4dp"
                     android:src="@drawable/ic_pos"
@@ -291,7 +339,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="35dp"
+                    android:textSize="28dp"
                     android:gravity="center"
                     android:layout_margin="4dp"
                     android:padding="4dp"
@@ -366,7 +414,6 @@
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:id="@+id/lcvTracking"
                 android:orientation="vertical"
                 android:padding="4dp">
 
